# modal-tableau-interpolation

./: .gitignore  .stan.toml  Logic.cabal  Makefile  README.md  hie.yaml  package.yaml  stack.yaml
.github/workflows/: ci.yml
Logic/: Internal.hs  PDL.hs  Propositional.hs
Logic/BasicModal/: Examples.hs
Logic/BasicModal/Interpolation/: ProofTree.hs
Logic/PDL/: Examples.hs  Tools.hs
Logic/PDL/Prove/: Tree.hs
Logic/Propositional/: Examples.hs  Interpolation.hs
Logic/Propositional/Interpolation/: ProofTree.hs
Logic/Propositional/Prove/: List.hs  Tree.hs
data/: formulae_exp_sat.txt  formulae_exp_unsat.txt
exec/: example.hs  index.html  tapdleau.hs
src/Logic/: BasicModal.hs  Final.hs  Internal.hs  PDL.hs  Propositional.hs
src/Logic/BasicModal/: Consistent.hs  Interpolation.hs
src/Logic/BasicModal/Interpolation/: ProofTree.hs
src/Logic/BasicModal/Prove/: Tree.hs
src/Logic/PDL/: Consistent.hs  Examples.hs  Interpolation.hs  Lex.x  Loaded.hs  Parse.y  Semantics.hs  TeX.hs  Token.hs  Tools.hs  Unfold.hs
src/Logic/PDL/Interpolation/: ProofTree.hs
src/Logic/PDL/Prove/: Tree.hs  UnravelStar.hs
src/Logic/Propositional/: Examples.hs
src/Logic/Propositional/Interpolation/: Naive.hs  ProofTree.hs
src/Logic/Propositional/Prove/: List.hs  Tree.hs
test/: basicmodal.hs  pdl.hs  propositional.hs  tests.hs
